--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
 <main>
     <header>
         <!-- insert banner image and logo as seen in the sample website, the links for the images are provided in the question -->
-        <div>
-            <img src="" alt="hello Abdul Image">
-        </div>
         <h1>
             Understanding the fundamentals of state in Javascript
         </h1>
         <p>
-            Designed by Shaik Abdul Rhaiman
+            <a>by Shaik Abdul Rhaiman</a>
         </p>
     </header>
 
