--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <main>
     <header>
         <!-- insert banner image and logo as seen in the sample website, the links for the images are provided in the question -->
+        <div>
+        </div>
         <h1>
             Understanding the fundamentals of state in Javascript
         </h1>
